--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "primeflex": "^1.1.0",
     "primeicons": "^3.0.0-rc.1",
     "primevue": "^2.0.0-beta.1",
     "vue": "^2.6.11",
